# project-ironfall

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/engine/: CMakeLists.txt
client/engine/include/Engine/: Application.h  EntryPoint.h
client/engine/src/: Application.cpp
client/game/: CMakeLists.txt
client/game/src/: Game.cpp
engine/: CMakeLists.txt
engine/resources/shaders/: Renderer2D_Quad.fragment  Renderer2D_Quad.vertex  Renderer2D_Text.fragment  Renderer2D_Text.vertex
engine/src/: dxpch.cpp  dxpch.h
engine/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Common.h  Components.h  Entity.cpp  Entity.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  ResourceLoader.cpp  ResourceLoader.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  Time.cpp  Time.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/src/Engine/Math/: Math.cpp  Math.h
engine/src/Engine/Physics/: Collider.cpp  Collider.h
engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  MSDFData.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Primitive.cpp  Primitive.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererUI.cpp  RendererUI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
game/: CMakeLists.txt
game/src/Game/: Game.cpp  MenuScene.cpp  MenuScene.h  PlayScene.cpp  PlayScene.h  PlayerController.cpp  PlayerController.h
game/src/Game/Player/: Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerWeaponManager.cpp  PlayerWeaponManager.h
remote/: CMakeLists.txt
remote/include/: remote.h
remote/src/: remote.cpp
resources/models/: Ground.mtl  Humanoid.fbx  Humanoid.mtl
resources/shaders/: Renderer2D_Quad.fragment  Renderer2D_Quad.vertex  Renderer2D_Text.fragment  Renderer2D_Text.vertex  RendererUI_Quad.fragment  RendererUI_Quad.vertex  RendererUI_Text.fragment  RendererUI_Text.vertex  Renderer_Mesh.fragment  Renderer_Mesh.vertex  Renderer_Primitive.fragment  Renderer_Primitive.vertex
server/: CMakeLists.txt
server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/Shared/: Assert.h
